test/errhandling/ferguson/throw-new-borrowed2.good
throw-new-borrowed2.chpl:3: error: Throwing borrowed error - please throw owned
